# isocodes

./: LICENSE  README.md  isocodes.cabal  package.yaml  stack.yaml
.circleci/: config.yml
src/ISO/: Convert.hs  Country.hs  Currency.hs  Format.hs  Lang.hs
src/ISO/Country/: Codes.hs  Internal.hs
src/ISO/Currency/: Codes.hs  Internal.hs
src/ISO/Lang/: Codes.hs  Internal.hs
test/: Coherence.hs
test/coherence/: Main.hs
