cabal-version: 1.12

name:           isocodes
version:        0.1.1.0
description:    Please see the README on GitHub at <https://github.com/on-ramp/isocodes#readme>
homepage:       https://github.com/on-ramp/isocodes#readme
bug-reports:    https://github.com/on-ramp/isocodes/issues
author:         Oleksii Divak
maintainer:     oleksii@coinweb.io
copyright:      2021 Oleksii Divak
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/on-ramp/isocodes

library
  exposed-modules: ISO.Convert
                   ISO.Country
                   ISO.Country.Codes
                   ISO.Country.Internal
                   ISO.Currency
                   ISO.Currency.Codes
                   ISO.Currency.Internal
                   ISO.Lang
                   ISO.Lang.Codes
                   ISO.Lang.Internal

  other-modules: ISO.Format
  
  hs-source-dirs: src

  ghc-options: -Wall
               -O1

  build-depends: aeson
               , attoparsec
               , base >=4.7 && <5
               , bytestring
               , containers
               , country
               , currency-codes
               , http-api-data
               , iso639
               , postgresql-simple
               , scientific
               , text
               , unordered-containers

  default-language: Haskell2010

test-suite coherence
  type: exitcode-stdio-1.0

  main-is: Main.hs

  hs-source-dirs: test/coherence

  ghc-options: -Wall
               -threaded
               -O1
               -rtsopts
               -with-rtsopts=-N

  build-depends: aeson
               , base >=4.7 && <5
               , bytestring
               , hspec
               , http-api-data
               , isocodes
               , QuickCheck
               , text

  default-language: Haskell2010
